--- a/estilomasterclass.css
+++ b/estilomasterclass.css
@@ -1,6 +1,7 @@
 body{
     font-family: "Sohne", "Helvetica", "Arial", sans-serif;
     background-color: rgb(63, 63, 63);
+    color:#ffffff
 }
 
 
@@ -46,12 +47,12 @@ body{
     flex-direction: column;
     
     align-items: center;
-    background-color: antiquewhite;
+    /*background-color: antiquewhite;*/
 }
 
 #portada{
     width: 70%;
-    background-color: aquamarine;
+    /*background-color: aquamarine;*/
 }
 #portada img{
     border-radius: 1em;
@@ -107,8 +108,6 @@ body{
     flex-direction: row;
     margin: auto;
     justify-content:space-between;
-    margin-top: 60px;
-    margin-bottom: 60px;
 }
 /*-------------------------||-------------------------*/
 
@@ -117,7 +116,7 @@ body{
     width: 90%;
     display:flex;
     margin: auto;
-    background-color: beige;
+    /*background-color: beige;*/
     flex-direction: column;
     align-items: center;
 }
@@ -231,19 +230,54 @@ body{
     display: flex;
     flex-direction: row;
     margin: auto;
-    justify-content: space-evenly;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     background-color: blueviolet;
 }
 
 #div_ultimo_contenedor_titulos{
     display: block;
-    width: 30%;
+    width: 40%;
     background-color: aqua;
+    margin-left: 0;
+}
+
+#div_ultimo_contenedor_titulos h1{
+    font-size: 3em;
+    /*font-family: "Sohne Schmal",serif;*/
+    letter-spacing: -5px;
+    line-height: 90%;
+    font-weight: 900;
 }
 
 #div_ultimo_imagen{
-    width: 60%;
+    width: 50%;
+}
+
+#div_ultimo_imagen img{
+    width: 100%;
+}
+
+#ultimo_boton{
+    background-color: #f45c76;
+    color: white;
+    border-radius:  1em;
+    width: 40%;
+    height: 51px;
+    margin-bottom: 1em;
+    border-style: none;
+}
+
+#ultimo_boton span{
+    font-weight: bold;
+}
+#ultimo_div_botones{
+    display: flex;
+    flex-direction: row;    
+}
+
+#ultimo_div_botones p{
+    margin-left: 20px;
 }
 
 /*-------------------------||-------------------------*/
@@ -262,7 +296,11 @@ body{
 /*-------------------------||-------------------------*/
 
 .espaciado{
-    margin-top: 60px;
+    /*margin-top: 30px;
+    margin-bottom: 30px;*/
+    border-style: solid;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 
