--- a/estilomasterclass.css
+++ b/estilomasterclass.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Sohne", "Helvetica", "Arial", sans-serif;
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(0, 0, 0);
     color:#ffffff
 }
 
@@ -169,7 +169,6 @@ body{
 
 #div_contenedor_otras_clases{
     display:block;
-    background-color: #f45c76;
 }
 .div_contenedor_titulos_clases{
     display: flex;
@@ -185,7 +184,6 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: aquamarine;
     margin: auto;
     width: 80%;
     color:#ffffff;
@@ -232,13 +230,11 @@ body{
     margin: auto;
     justify-content: center;
     align-items: center;
-    background-color: blueviolet;
 }
 
 #div_ultimo_contenedor_titulos{
     display: block;
     width: 40%;
-    background-color: aqua;
     margin-left: 0;
 }
 
@@ -262,7 +258,7 @@ body{
     background-color: #f45c76;
     color: white;
     border-radius:  1em;
-    width: 40%;
+    width: 30%;
     height: 51px;
     margin-bottom: 1em;
     border-style: none;
@@ -293,14 +289,41 @@ body{
 
 }
 
+.footer_textos{
+    display: block;
+}
+
+.footer_textos ul{
+    list-style: none;
+    text-align: left;
+    justify-content: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer_textos ul li{
+    margin-top: 2em;
+    margin-left: 0em;
+
+    
+}
+
 /*-------------------------||-------------------------*/
 
 .espaciado{
     /*margin-top: 30px;
     margin-bottom: 30px;*/
-    border-style: solid;
     padding-top: 30px;
     padding-bottom: 30px;
+}
+
+.texto_color_gris{
+    color:rgb(151, 150, 150);
+    font-weight: 600;
+}
+
+.subrayado{
+    text-decoration: underline;
 }
 
 
